--- a/first page.html
+++ b/first page.html
@@ -311,9 +311,11 @@ function createDiv(height, width) {
 // ]]>
 </script>
 
-        
-<a href="first%20page.html" class="cd-top">Top</a>
+<p id="aboutme">Go do something instead of waste your time here.</p>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="http://arrow.scrolltotop.com/arrow64.js"></script>
+<noscript>Not seeing a <a href="http://www.scrolltotop.com/">Scroll to Top Button</a>? Go to our FAQ page for more info.</noscript>
 
         
     </body>
